--- a/casaberriel-backend/src/main/resources/templates/reservas.html
+++ b/casaberriel-backend/src/main/resources/templates/reservas.html
@@ -72,9 +72,9 @@
 								<b>	<label for="nombre" class="form-label" data-i18n="form.name_surname"> </label></b>
 									<div class="input-group">
 										<input type="text" id="nombre" name="nombre" class="form-control"
-											placeholder="Nombre" required>
+											required>
 										<input type="text" id="apellidos" name="apellidos" class="form-control"
-											placeholder="Apellidos" required>
+											 required>
 									</div>
 								</div>
 
@@ -89,7 +89,7 @@
 									<div class="col-md-6 mb-3">
 										<b>	<label for="direccion" class="form-label" data-i18n="form.address"></label> </b>
 										<input type="text" class="form-control" id="direccion" name="direccion"
-											placeholder="Tu dirección" required>
+											 required>
 									</div>
 								</div>
 
