--- a/casaberriel-backend/src/main/resources/templates/index.html
+++ b/casaberriel-backend/src/main/resources/templates/index.html
@@ -217,7 +217,7 @@
 							</div>
 							<div class="form-group mb-3">
 								<label data-i18n="contact.email_placeholder"></label>
-								<input type="email" class="form-control" id="email" required
+								<input type="email" class="form-control" name="mail" id="mail" required
 									style="border: 1px solid #ddd; padding: 10px;">
 							</div>
 							<div class="form-group mb-3">
