--- a/casaberriel-backend/src/main/resources/templates/registro.html
+++ b/casaberriel-backend/src/main/resources/templates/registro.html
@@ -19,29 +19,30 @@
 				<form th:action="@{/registro/nuevo}" method="POST" th:object="${usuario}" id="limpiar" >
 					<div class="form-group">
 						<label for="nombre" data-i18n="form.name"></label> <input type="text" name="nombre"
-							class="form-control" id="nombre" required>
+							class="form-control" id="nombre" th:value="*{nombre}" required>
 					</div>
 
 					<div class="form-group">
 						<label for="apellidos" data-i18n="form.surname"></label> <input type="text" name="apellidos"
-							class="form-control" id="apellidos" required>
+							class="form-control" id="apellidos"  th:value="*{apellidos}" required>
 					</div>
 					<div class="form-group">
 						<label for="direccion" data-i18n="form.address"></label> <input type="text" name="direccion"
-							class="form-control" id="direccion" required>
+							class="form-control" id="direccion" th:value="*{direccion}" required>
 					</div>
 					<div class="form-group">
 						<label for="telefono" data-i18n="form.phone"></label> <input type="text" name="telefono"
-							class="form-control" id="telefono"  min="9" max="12" required>
+							class="form-control" id="telefono"  min="9" max="12"  th:value="*{telefono}" required>
 					</div>
 					<div class="form-group">
 						<label for="email">Email</label> <input type="email" name="email" class="form-control"
-							id="email" placeholder="user@example.com" required>
+							id="email" placeholder="user@example.com"  th:value="*{email}" required>
+
 					</div>
 					<div class="form-group">
 						<label for="password" data-i18n="form.password"></label>
 						<div class="input-group">
-							<input type="password" name="password" class="form-control" id="password" required>
+							<input type="password" name="password" class="form-control" id="password"  th:value="*{password}" required>
 							<span class="input-group-text" data-bs-toggle="tooltip" data-bs-placement="right"
 								title="La contraseña debe tener al menos 5 caracteres y no incluir caracteres especiales.">
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -55,7 +56,7 @@
 					</div>
 					<div class="text-center mt-4">
 						<button type="submit" class="btn btn-success" id="formRegistro" data-i18n="common.registration"></button>
-					</div>
+					</div><input type="hidden" id="focusField" th:value="${focusField}" />
 				</form>
 
 			</div>
@@ -107,7 +108,17 @@
 	</div>
 
 	<th:block th:include="componentes/_scripts.html"></th:block>
-
+	<script>
+	    document.addEventListener('DOMContentLoaded', () => {
+	        const focusField = document.getElementById('focusField').value;
+	        if (focusField) {
+	            const input = document.getElementById(focusField);
+	            if (input) {
+	                input.focus();
+	            }
+	        }
+	    });
+	</script>
 
 </body>
 
