--- a/casaberriel-backend/src/main/resources/templates/registro.html
+++ b/casaberriel-backend/src/main/resources/templates/registro.html
@@ -118,6 +118,14 @@
 	            }
 	        }
 	    });
+		document.getElementById("formRegistro").addEventListener("submit", function(event) {
+				const telefono = document.getElementById("telefono").value;
+
+				if (!/^\d{9,12}$/.test(telefono)) {
+					event.preventDefault();
+					alert("El número de teléfono debe tener entre 9 y 12 dígitos y solo contener números.");
+				}
+			});
 	</script>
 
 </body>
