--- a/casaberriel-backend/src/main/resources/templates/componentes/_nav.html
+++ b/casaberriel-backend/src/main/resources/templates/componentes/_nav.html
@@ -36,7 +36,7 @@
 				<li th:if="${#httpServletRequest.remoteUser != null}" class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" id="userDropdown" role="button" data-toggle="dropdown"
 						aria-haspopup="true" aria-expanded="false">
-						<strong>Bienvenid@ <span th:text="${#httpServletRequest.remoteUser}"></span></strong>
+						<strong data-i18n="banner.welcome"></strong><strong><span th:text="${#httpServletRequest.remoteUser}"></span></strong>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
 						<a sec:authorize="hasRole('ROLE_USER')" class="dropdown-item"
